# SQR_Anime_Voiceover

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: build.yml  test.yml
app/: api.py  drive_loader.py  parser.py  ui.py
scripts/: main.py
tests/: test_parser.py  test_ui.py
